Version 2.5.8dev:

* Bundle libmpeg2 with FS-UAE source (missing on many Linux distros).
* Don't install uaenative.library unless requested.

Version 2.5.7dev:

* Fix 68000 cycle exact mode (tbl == op_smalltbl_14_ff check was missing).
* Fixed specifying base_dir via config file (broke in 2.5.6dev).
* Re-enable slirp/a2065/sana2 by default. A2065 works partially,
  uaenet.device still crashes.
* Modified Makefile.am for out-of-tree builds.
* Fixed crash when playing videos with CD32 FMV (no display yet).
* Added libudis86 (disassembler library for x86 / x86-64).
* Explicitly flush lines logged to stdout.

Version 2.5.6dev:

* Updated emulation core from WinUAE 2820b8.
* Load libcapsimage from plugin instead of having it bundled.
* Updated built-in AROS rom [WinUAE 2.8.1].
* Starting FS-UAE.app with config file works again on OS X.
* Fixed a bug (potential crash) in fs_get_application_exe_path on windows.
* Initial support reading resources from fs-uae.dat (or embedded in the exe).
* Build scripts for SteamOS / Steam runtime version.
* Re-enable compiler optimizations for cpuemu, use -fno-strict-overflow
  to work around the issue that current cpu emulation code assumes signed
  integer overflow behavior.
* Added speedlink_strike_2_gamepad_12_5_1_0_windows.conf [TCD].
* Changes to support compilation on OS X 10.9.
* Added slirp support (not tested yet, not enabled by default).
* Enabled A2065 (not tested yet, not enabled by default).
* FS-UAE now uses automake in addition to autoconf.
* New requirement: libmpeg2 / libmpeg2convert for CD32 FMV support.
* Some bugfixes based on static code analysis + code cleanup.

Version 2.5.5dev:

* Dual joystick/mouse mode for joystick port 0, both a specific joystick
  device and mouse is enabled at the same time (only when
  joystick_port_0_mode = joystick and a joystick host device is selected).
* Show on-screen gui_message notifications from UAE code.
* Added missing @docdir@ substitution variable.