@@ -16,18 +16,25 @@
 static fs_thread *g_manymouse_thread = NULL;
 static int g_first_manymouse_index = 0;
 static volatile int g_manymouse_last_index = -1;
+static int g_debug_input = 0;
+
+#define db_log(name, format, ...) \
+    if (g_debug_ ## name) { \
+        fs_log(format, ## __VA_ARGS__); \
+}
 
 static void *manymouse_thread(void* data) {
-    fs_log("ManyMouse thread running\n");
+    fs_log("ManyMouse: (c) 2005-2012 Ryan C. Gordon\n");
+    fs_log("ManyMouse: thread running\n");
 
-    fs_log("initializing ManyMouse library, (c) 2005-2012 Ryan C. Gordon.\n");
     int k = g_fs_ml_input_device_count;
     g_first_manymouse_index = k;
     int mouse_count = ManyMouse_Init();
     if (mouse_count < 0) {
-        fs_log("initialization failed (%d)\n", mouse_count);
+        fs_log("ManyMouse: initialization failed (%d)\n", mouse_count);
     }
     else if (mouse_count == 0) {
+        fs_log("ManyMouse: no mice found\n");
         // no mice found, so we just quit using the library
     }
 
@@ -91,8 +98,9 @@ static void *manymouse_thread(void* data) {
                 // int maxval;
             }
             else if (event.type == MANYMOUSE_EVENT_BUTTON) {
-                // printf("device %d item %d value %d\n", event.device,
-                //         event.item, event.value);
+                db_log(input, "ManyMouse: EVENT_BUTTON "
+                       "device %d item %d value %d\n",
+                       event.device, event.item, event.value);
                 new_event = fs_ml_alloc_event();
                 new_event->type = event.value ? FS_ML_MOUSEBUTTONDOWN :
                         FS_ML_MOUSEBUTTONUP;
@@ -116,6 +124,26 @@ static void *manymouse_thread(void* data) {
             else if (event.type == MANYMOUSE_EVENT_ABSMOTION) {
                 // printf("MANYMOUSE_EVENT_ABSMOTION\n");
             }
+            else if (event.type == MANYMOUSE_EVENT_SCROLL) {
+                db_log(input, "ManyMouse: EVENT_SCROLL "
+                       "device %d item %d value %d\n",
+                       event.device, event.item, event.value);
+                new_event = fs_ml_alloc_event();
+                new_event->type = FS_ML_MOUSEBUTTONDOWN;
+                new_event->button.state = 1;
+                new_event->button.device = g_first_manymouse_index + \
+                        event.device;
+                new_event->button.button = 0;
+                if (event.item == 0) {
+                    if (event.value == 1) {
+                        new_event->button.button = FS_ML_BUTTON_WHEELUP;
+                    }
+                    else {
+                        new_event->button.button = FS_ML_BUTTON_WHEELDOWN;
+                    }
+                }
+                fs_ml_post_event(new_event);
+            }
         }
         fs_ml_usleep(1000);
     }
@@ -127,6 +155,9 @@ static void *manymouse_thread(void* data) {
 void fs_ml_mouse_init(void) {
     FS_ML_INIT_ONCE;
     fs_log("fs_ml_mouse_init\n");
+
+    g_debug_input = getenv("FS_DEBUG_INPUT") && \
+            getenv("FS_DEBUG_INPUT")[0] == '1';
 
     g_fs_ml_first_mouse_index = g_fs_ml_input_device_count;
     int k = g_fs_ml_input_device_count;
